Fixed menu color on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -94,6 +94,7 @@ ul {
 }
 
 .glass-bg {
+  height: 100%;
   position: fixed;
   inset: 0;
   z-index: 1;
